--- a/sl/mobile/android/chrome/browser.properties
+++ b/sl/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Namesti
 
 # Alerts
 alertAddonsDownloading=Prenos dodatka
-alertAddonsInstalledNoRestart=Namestitev končana
 alertAddonsFail=Namestitev ni uspela
+alertAddonsInstalledNoRestart.message=Namestitev končana
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=DODATKI
 
 alertDownloadsStart2=Prenos se začenja
 alertDownloadsDone2=Prenos končan 
@@ -19,8 +23,11 @@ alertDownloadsToast=Prenos se je začel …
 alertDownloadsPause=Ustavi
 alertDownloadsResume=Nadaljuj
 alertDownloadsCancel=Prekliči
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Prenosi so v gostujočih sejah onemogočeni
 
-alertFullScreenToast=Pritisni gumb NAZAJ za izhod iz celozaslonskega načina
+alertFullScreenToast=Pritisnite gumb NAZAJ za izhod iz celozaslonskega načina
 
 # LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
 # %S will be replaced by the name of the search engine (exposed by the current page)
@@ -87,7 +94,7 @@ identity.encrypted2=Šifrirano
 identity.ownerUnknown3=neznan
 
 # Geolocation UI
-geolocation.allow=Deli
+geolocation.allow=Objavi
 geolocation.dontAllow=Ne objavi
 geolocation.ask=Ali želite objaviti vaš položaj na %S?
 # LOCALIZATION NOTE (geolocation.shareLocation): Label that will be used in
@@ -115,6 +122,35 @@ contacts.ask=Dovolim %S dostop do vaših stikov?
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Ne sprašuj več za to stran 
+
+# Device Storage API
+deviceStorageMusic.allow=Dovoli
+deviceStorageMusic.dontAllow=Ne dovoli
+deviceStorageMusic.ask=Dovolim %S dostop do vaše glasbe?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Ne sprašuj več za to stran
+
+deviceStoragePictures.allow=Dovoli
+deviceStoragePictures.dontAllow=Ne dovoli
+deviceStoragePictures.ask=Dovolim %S dostop do vaših slik?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Ne sprašuj več za to stran
+
+deviceStorageSdcard.allow=Dovoli
+deviceStorageSdcard.dontAllow=Ne dovoli
+deviceStorageSdcard.ask=Dovolim %S dostop do zunanje shrambe?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Ne sprašuj več za to stran
+
+deviceStorageVideos.allow=Dovoli
+deviceStorageVideos.dontAllow=Ne dovoli
+deviceStorageVideos.ask=Dovolim %S dostop do vaših videov?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Ne sprašuj več za to stran
 
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Besedilo, skopirano v odložišče
 
 # Casting
-casting.prompt=Posreduj na napravo
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Posreduj na napravo
+casting.mirrorTab=Zrcali zavihek
+casting.mirrorTabStop=Končaj zrcaljenje
 
 # Context menu
 contextmenu.openInNewTab=Odpri povezavo v novem zavihku
@@ -209,7 +249,9 @@ contextmenu.unmute=Glasno
 contextmenu.saveVideo=Shrani video
 contextmenu.saveAudio=Shrani zvok
 contextmenu.addToContacts=Dodaj med stike
-contextmenu.castToScreen=Posreduj na zaslon
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Posreduj na napravo
 
 contextmenu.copy=Kopiraj
 contextmenu.cut=Izreži
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Pošta
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Izberi vir
 feedHandler.subscribeWith=Naroči se z
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S je zastarel. Uporabite %S
