--- a/sl/mobile/android/chrome/webapp.properties
+++ b/sl/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 posodobitev ni uspela;Posodobitve niso uspele (#1)
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Pridobivanje posodobitev (%1$S) ni uspelo;Pridobivanje posodobitev (%1$S) ni uspelo
+
+webappsDisabledInGuest=Nameščanje aplikacij v gostujočih sejah je onemogočeno
