Fix window titles

--- a/et/browser/installer/nsisstrings.properties
+++ b/et/browser/installer/nsisstrings.properties
@@ -18,7 +18,7 @@
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
 
-WIN_CAPTION=$BrandShortNamei paigaldamine
+WIN_CAPTION=$BrandShortName - paigaldamine
 
 INTRO_BLURB1=Täname, et valisid $BrandFullNamei, brauseri, mis eelistab sind kõigile muule.
 INSTALL_BLURB1=Sind ootab ees parima kiiruse, paindlikkuse ja turvalisuse nautimine, mis jätab juhtohjad alati sinu kätte.
