--- a/et/browser/installer/override.properties
+++ b/et/browser/installer/override.properties
@@ -23,8 +23,8 @@
 # and end of a strong enclose the add and additional double quote to the
 # beginning and end of the string (e.g. ""This will include quotes"").
 
-SetupCaption=$BrandFullNamei paigaldamine
-UninstallCaption=$BrandFullNamei eemaldamine
+SetupCaption=$BrandFullName - paigaldamine
+UninstallCaption=$BrandFullName - eemaldamine
 BackBtn=< &Tagasi
 NextBtn=&Edasi >
 AcceptBtn=Ma &nõustun litsentsilepingu tingimustega
