--- a/sl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,3 +99,6 @@ quit-button.tooltiptext.mac = Končaj %1$S (%2$S)
 
 panic-button.label = Pozabi
 panic-button.tooltiptext = Pozabi nekaj zgodovine brskanja
+
+loop-call-button.label = Povabite koga ne pogovor
+loop-call-button.tooltiptext = Povabite koga ne pogovor
