--- a/sl/browser/chrome/browser/shellservice.properties
+++ b/sl/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=&Možnosti %S
 safeModeLabel=&Varni način %S
-setDefaultBrowserTitle=Privzeti brskalnik
-setDefaultBrowserMessage=%S trenutno ni vaš privzeti brskalnik. Želite, da to postane?
-setDefaultBrowserDontAsk=Preveri tudi ob naslednjem zagonu brskalnika %S.
-alreadyDefaultBrowser=%S je že vaš privzeti brskalnik.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Izkusite %S v polni meri, tako da ga nastavite kot privzet brskalnik
+setDefaultBrowserConfirm.label     = Uporabi %S kot privzet brskalnik
+setDefaultBrowserConfirm.accesskey = U
+setDefaultBrowserOptions.label     = Možnosti
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Ne zdaj
+setDefaultBrowserNotNow.accesskey  = N
+setDefaultBrowserNever.label       = Ne sprašuj več
+setDefaultBrowserNever.accesskey   = S
+
+
 desktopBackgroundLeafNameWin=Ozadje_namizja.bmp
 DesktopBackgroundDownloading=Shranjevanje slike ...
 DesktopBackgroundSet=Nastavi ozadje namizja
