--- a/sl/browser/chrome/browser/webrtcIndicator.properties
+++ b/sl/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Pokazatelj skupne rabe
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Vaša kamera in mikrofon sta v skupni rabi. Kliknite za upravljanje skupne rabe.
 webrtcIndicator.sharingCamera.tooltip              = Vaša kamera je v skupni rabi. Kliknite za upravljanje skupne rabe.
 webrtcIndicator.sharingMicrophone.tooltip          = Vaš mikrofon je v skupni rabi. Kliknite za upravljanje skupne rabe.
+webrtcIndicator.sharingApplication.tooltip = Aplikacija je v skupni rabi. Kliknite za upravljanje skupne rabe.
 webrtcIndicator.sharingScreen.tooltip = Vaš zaslon je v skupni rabi. Kliknite za upravljanje skupne rabe.
 webrtcIndicator.sharingWindow.tooltip = Okno je v skupni rabi. Kliknite za upravljanje skupne rabe.
 
@@ -23,14 +24,29 @@ webrtcIndicator.sharingWindow.tooltip = Okno je v skupni rabi. Kliknite za uprav
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Uporaba kamere na "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Uporaba mikrofona na "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Uporaba aplikacije na "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Uporaba zaslona na "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Uporaba okna na "%S"
 webrtcIndicator.controlSharing.menuitem = Upravljanje skupne rabe
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Skupna raba kamere z #1 zavihkom;Skupna raba kamere z več (#1) zavihki
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Skupna raba mikrofona z #1 zavihkom;Skupna raba mikrofona z več (#1) zavihki
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Skupna raba aplikacije z #1 zavihkom;Skupna raba aplikacije z več (#1) zavihki
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Skupna raba zaslona z #1 zavihkom;Skupna raba zaslona z več (#1) zavihki
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Skupna raba okna z #1 zavihkom;Skupna raba okna z več (#1) zavihki
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
