--- a/sl/browser/chrome/browser/quitDialog.properties
+++ b/sl/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Shrani in zapri
 neverAsk2=&Ne sprašuj več
 message=Ali želite, da %S shrani vaše zavihke in okna za naslednji zagon?
 messageNoWindows=Ali želite, da %S shrani vaše zavihke za naslednji zagon?
+messagePrivate=Uporabljate zasebni način brskanja. Če zaprete %S, boste izgubili vse odprte zavihke in okna.
