--- a/sl/browser/chrome/browser/preferences/preferences.properties
+++ b/sl/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Naslednji piškotki so shranjeni na vašem računalniku:
 cookiesFiltered=Naslednji piškotki ustrezajo iskanemu:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Odstrani podatke strani za delo brez povezave
 offlineAppRemovePrompt=Po odstranitvi teh podatkov %S ne bo na voljo brez povezave. Ali ste prepričani, da želite odstraniti to stran za delo brez povezave?
 offlineAppRemoveConfirm=Odstrani podatke za delo brez povezave
