--- a/nb-NO/browser/chrome/browser/browser.properties
+++ b/nb-NO/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=Ikke vis denne meldingen når sprettoppvinduer b
 popupWarningDontShowFromLocationbar=Ikke vis infolinjen når sprettoppvinduer blokkeres
 popupShowPopupPrefix=Åpne «%S»
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=%S blokkerer innhold på denne siden.
+badContentBlocked.notblocked.message=%S blokkerer ikke noe innhold på denne siden.
+
 # missing plugin installer
 installPlugin.message = Vil du installere programtillegget som trengs for å vise medieinnhold på denne siden?
 installPlugin.button.label=Installer %S
@@ -442,8 +447,14 @@ webapps.install = Installer
 webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
 webapps.requestInstall = Ønsker du installere «%1$S» fra dette nettstedet (%2$S)?
-webapps.install.success = Applikasjon installert
+webapps.install.success = Program installert
 webapps.install.inprogress = Installasjon utføres
+webapps.uninstall = Avinstaller
+webapps.uninstall.accesskey = A
+webapps.doNotUninstall = Ikke avinstaller
+webapps.doNotUninstall.accesskey = I
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Vil du avinstallere «%1$S»?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S er nå i fullskjerm.
@@ -504,10 +515,24 @@ getUserMedia.shareMicrophone.message = Vil du dele mikrofonen din med %S?
 getUserMedia.shareScreen.message = Vil du dele skjermen med %S?
 getUserMedia.shareCameraAndMicrophone.message = Vil du dele kamera og mikrofon med %S?
 getUserMedia.shareScreenAndMicrophone.message = Vil du dele mikrofon og skjerm med %S?
+getUserMedia.selectWindow.label=Vindu å dele:
+getUserMedia.selectWindow.accesskey=V
+getUserMedia.selectScreen.label=Skjerm å dele:
+getUserMedia.selectScreen.accesskey=S
+getUserMedia.selectApplication.label=Program å dele:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Ingen video
-getUserMedia.noWindowOrScreen.label = Ingen vinduer eller skjerm
+getUserMedia.noApplication.label = Ingen program
+getUserMedia.noScreen.label = Ingen skjerm
+getUserMedia.noWindow.label = Ingen vindu
 getUserMedia.noAudio.label = Ingen lyd
 getUserMedia.shareEntireScreen.label = Hele skjermen
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 vindu);#1 (#2 vinduer)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -515,6 +540,7 @@ getUserMedia.shareEntireScreen.label = Hele skjermen
 getUserMedia.shareSelectedDevices.label = Del valgt enhet;Del valgte enheter
 getUserMedia.shareSelectedDevices.accesskey = D
 getUserMedia.shareScreen.label = Del skjerm
+getUserMedia.shareApplication.label = Del valgt program
 getUserMedia.shareWindow.label = Del valgt vindu
 getUserMedia.shareSelectedItems.label = Del valgte elementer
 getUserMedia.always.label = Aldri del
@@ -526,6 +552,7 @@ getUserMedia.never.accesskey = A
 getUserMedia.sharingCamera.message2 = Du deler nå kamera med denne siden.
 getUserMedia.sharingMicrophone.message2 = Du deler nå mikrofon med denne siden.
 getUserMedia.sharingCameraAndMicrophone.message2 = Du deler nå kamera og mikrofon med denne siden.
+getUserMedia.sharingApplication.message = Du deler nå et program med denne siden.
 getUserMedia.sharingScreen.message = Du deler nå skjermen din med denne siden.
 getUserMedia.sharingWindow.message = Du deler nå et vindu med denne siden.
 getUserMedia.continueSharing.label = Fortsett deling
@@ -533,13 +560,34 @@ getUserMedia.continueSharing.accesskey = F
 getUserMedia.stopSharing.label = Stopp deling
 getUserMedia.stopSharing.accesskey = S
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S har blokkert innhold som ikke er trygt.
-mixedContentBlocked.keepBlockingButton.label = Fortsett blokkering
-mixedContentBlocked.keepBlockingButton.accesskey = B
-mixedContentBlocked.unblock.label = Slå av beskyttelse på denne siden
-mixedContentBlocked.unblock.accesskey = S
+getUserMedia.sharingMenu.label = Faner som deler enhet
+getUserMedia.sharingMenu.accesskey = F
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (kamera)
+getUserMedia.sharingMenuMicrophone = %S (mikrofon)
+getUserMedia.sharingMenuApplication = %S (program)
+getUserMedia.sharingMenuScreen = %S (skjerm)
+getUserMedia.sharingMenuWindow = %S (vindu)
+getUserMedia.sharingMenuCameraMicrophone = %S (kamera og mikrofon)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon og program)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon og skjerm)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon og vindu)
+getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon og program)
+getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon og skjerm)
+getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon og vindu)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Ukjent opprinnelse
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S ser ut til å være treg … å … starte.
