--- a/nb-NO/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nb-NO/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,3 +99,6 @@ quit-button.tooltiptext.mac = Avslutt %1$S (%2$S)
 
 panic-button.label = Glem
 panic-button.tooltiptext = Glem deler av nettleserhistorikken
+
+loop-call-button.label = Inviter noen til å prate
+loop-call-button.tooltiptext = Inviter noen til å prate
