--- a/nb-NO/browser/chrome/browser/preferences/preferences.properties
+++ b/nb-NO/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Følgende infokapsler er lagret på datamaskinen:
 cookiesFiltered=Følgende infokapsler passer til søket:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Slett frakoblet nettsidedata
 offlineAppRemovePrompt=Etter at du sletter dette vil %S ikke lenger bli tilgjengelig i frakoblet modus.  Er du sikker på at du vil slette frakoblet data?
 offlineAppRemoveConfirm=Slett frakoblet data
