--- a/nb-NO/browser/chrome/browser/quitDialog.properties
+++ b/nb-NO/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Lagre og avslutt
 neverAsk2=I&kke spør neste gang
 message=Vil du at %S skal lagre fanene og vinduene til neste gang den starter?
 messageNoWindows=Vil du at %S skal lagre fanene til neste gang den starter?
+messagePrivate=Du er i privat nettlesing-modus. Hvis du avslutter %S nå, vil alle åpne faner og vinduer forkastes.
