--- a/nb-NO/browser/chrome/browser/webrtcIndicator.properties
+++ b/nb-NO/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Delingsindikator
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Kamera og mikrofon deles nå. Trykk for å velge deling.
 webrtcIndicator.sharingCamera.tooltip              = Kamera deles nå. Trykk for å velge deling.
 webrtcIndicator.sharingMicrophone.tooltip          = Mikrofon deles nå. Trykk for å velge deling.
+webrtcIndicator.sharingApplication.tooltip = Et program deles. Trykk for å kontrollere deling.
 webrtcIndicator.sharingScreen.tooltip = Skjermen din deles nå. Trykk for å velge deling.
 webrtcIndicator.sharingWindow.tooltip = Et vindu deles nå. Trykk for å velge deling.
 
@@ -23,14 +24,29 @@ webrtcIndicator.sharingWindow.tooltip = Et vindu deles nå. Trykk for å velge d
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Deler kamera med «%S»
 webrtcIndicator.sharingMicrophoneWith.menuitem = Deler mikrofon med «%S»
+webrtcIndicator.sharingApplicationWith.menuitem = Deler et program med «%S»
 webrtcIndicator.sharingScreenWith.menuitem = Deler skjerm med «%S»
 webrtcIndicator.sharingWindowWith.menuitem = Deler et vindu med «%S»
 webrtcIndicator.controlSharing.menuitem = Velg deling
 # LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
 # Semicolon-separated list of plural forms.
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Deler kamera med #1 fane;Deler kamera med #1 faner
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Deler mikrofon med #1 fane;Deler mikrofon med #1 faner
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Deler et program med #1 fane;Deler programmer med #1 faner
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Deler skjerm med #1 fane;Deler skjerm med #1 faner
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Deler et vindu med #1 fane;Deler vinduer med #1 faner
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
