[qa] browser, toolkit, security: shorten strings and fixed accesskeys

--- a/sr/toolkit/chrome/global/config.properties
+++ b/sr/toolkit/chrome/global/config.properties
@@ -10,7 +10,7 @@ locked=закључано
 # Type column values
 string=стринг
 int=цео број
-bool=булов (Boolean)
+bool=boolean
 
 # Preference prompts
 # %S is replaced by one of the type column values above
