--- a/sr/browser/chrome/browser/browser.properties
+++ b/sr/browser/chrome/browser/browser.properties
@@ -191,17 +191,17 @@ pluginActivateTrigger.accesskey=Д
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
 # clear" is set to "Everything", the Clear Recent History dialog's title is
 # changed to this.  See UI mockup and comment 11 at bug 480169 -->
-sanitizeDialog2.everything.title=Очисти сав историјат
-sanitizeButtonOK=Очисти сад
+sanitizeDialog2.everything.title=Обриши сав историјат
+sanitizeButtonOK=Обриши сада
 # LOCALIZATION NOTE (sanitizeButtonClearing): The label for the default
 # button between the user clicking it and the window closing.  Indicates the
 # items are being cleared.
-sanitizeButtonClearing=Чистим
+sanitizeButtonClearing=Бришем
 
 # LOCALIZATION NOTE (sanitizeEverythingWarning2): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
 # provided that the user has not modified the default set of history items to clear.
-sanitizeEverythingWarning2=Цео историјат ће бити очишћен.
+sanitizeEverythingWarning2=Цео историјат ће бити обрисан.
 # LOCALIZATION NOTE (sanitizeSelectedWarning): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
 # provided that the user has modified the default set of history items to clear.
