--- a/sr/browser/chrome/browser/places/places.properties
+++ b/sr/browser/chrome/browser/places/places.properties
@@ -39,13 +39,13 @@ view.sortBy.1.visitCount.accesskey=б
 view.sortBy.1.keyword.label=Сортирај по кључној речи
 view.sortBy.1.keyword.accesskey=к
 view.sortBy.1.description.label=Сортирај по опису
-view.sortBy.1.description.accesskey=р
+view.sortBy.1.description.accesskey=т
 view.sortBy.1.dateAdded.label=Сортирај по датуму додавања
 view.sortBy.1.dateAdded.accesskey=д
 view.sortBy.1.lastModified.label=Сортирај по последњој измени
 view.sortBy.1.lastModified.accesskey=з
 view.sortBy.1.tags.label=Сортирај по ознакама
-view.sortBy.1.tags.accesskey=н
+view.sortBy.1.tags.accesskey=м
 
 searchBookmarks=Претрага забелешки
 searchHistory=Претрага историјата
