[qa] toolkit: matching instructions to button label

--- a/sr/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/sr/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -41,8 +41,8 @@ profileCreationFailed=Не могу да направим профил. Веро
 profileCreationFailedTitle=Неуспешно стварање профила
 profileExists=Профил под овим називом већ постоји. Изаберите другачије име.
 profileExistsTitle=Профил постоји
-profileFinishText=Кликните на „Заврши“ да направите нови профил.
-profileFinishTextMac=Кликните на „Заврши“ да направите нови профил.
+profileFinishText=Кликните на „Доврши“ да направите нови профил.
+profileFinishTextMac=Кликните на „Доврши“ да направите нови профил.
 profileMissing=Профил %S не може да се учита. Можда недостаје или му се не може приступити.
 profileMissingTitle=Профил недостаје
 
