[S] devtools: Bug 1070957 - Show deprecation notice in App Manager

--- a/it/browser/chrome/browser/devtools/app-manager.properties
+++ b/it/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice = Il Gestore app verrà rimosso nelle prossime versioni. I progetti sono stati trasferiti in WebIDE.
+index.launchWebIDE = Apri WebIDE
+index.readMoreAboutWebIDE = Ulteriori informazioni
 device.deviceSize = Dimensioni dispositivo: %1$Sx%2$S (%3$S DPI)
 connection.connectedToDevice = Connesso a %1$S
 connection.connectTo = Connetti a %1$S:%2$S
