--- a/nb-NO/browser/chrome/browser/shellservice.properties
+++ b/nb-NO/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=%S-i&nnstillinger
 safeModeLabel=%S &sikker modus
-setDefaultBrowserTitle=Standard nettleser
-setDefaultBrowserMessage=Vil du bruke %S som standard nettleser?
-setDefaultBrowserDontAsk=Alltid sjekk dette ved oppstart av %S.
-alreadyDefaultBrowser=%S er allerede standard nettleser.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Få mest mulig ut av %S ved å sette den som standard nettleser
+setDefaultBrowserConfirm.label     = Bruk %S som standard nettleser
+setDefaultBrowserConfirm.accesskey = B
+setDefaultBrowserOptions.label     = Innstillinger
+setDefaultBrowserOptions.accesskey = I
+setDefaultBrowserNotNow.label      = Ikke nå
+setDefaultBrowserNotNow.accesskey  = k
+setDefaultBrowserNever.label       = Ikke spør igjen
+setDefaultBrowserNever.accesskey   = e
+
+
 desktopBackgroundLeafNameWin=Skrivebordsbakgrunn.bmp
 DesktopBackgroundDownloading=Lagrer bilde …
 DesktopBackgroundSet=Sett skrivebordsbakgrunn
