--- a/nb-NO/browser/chrome/browser/loop/loop.properties
+++ b/nb-NO/browser/chrome/browser/loop/loop.properties
@@ -6,36 +6,265 @@
 
 share_link_header_text=Del denne lenken for å invitere noen til å prate:
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Hvem inviterer du?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=Invitasjonen utgår om {{expiry_time}} dag;Invitasjonen utgår om {{expiry_time}} dager
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=Invitasjonen utgår om {{expiry_time}} time;Invitasjonen utgår om {{expiry_time}} timer
+
 # Status text
+display_name_guest=Gjest
 display_name_dnd_status=Ikke forstyrr
 display_name_available_status=Tilgjengelig
 
-unable_retrieve_url=Beklager, vi klarte ikke hente en samtale-url.
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=Beklager, vi klarte ikke hente samtale-url.
+session_expired_error_description=Økten er utgått. Alle URL-er du har opprettet og delt tidligere vil ikke lenger virke.
+could_not_authenticate=Klarte ikke autentisere
+password_changed_question=Har du endret pasord?
+try_again_later=Prøv igjen senere
+could_not_connect=Klarte ikke koble til serveren
+check_internet_connection=Kontroller Internett-tilknytningen din
+login_expired=Innloggingen din er utgått
+service_not_available=Tjenesten er utilgjengelig akkurat nå
+problem_accessing_account=Et problem oppstod ved tilgang til kontoen din
+
+## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
+## the appropriate action.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Prøv igjen
+
+share_email_subject3=Du er invitert til en samtale
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=For å godta denne invitasjonen, kopier eller klikk på denne lenken for å starte samtalen:\r\n\r\n{{callUrl}}
+share_button=E-post
+copy_url_button=Kopier
+copied_url_button=Kopiert!
+
+panel_footer_signin_or_signup_link=Logg inn eller registrer deg
+
+settings_menu_item_account=Konto
+settings_menu_item_settings=Innstillinger
+settings_menu_item_signout=Logg ut
+settings_menu_item_signin=Logg inn
+settings_menu_button_tooltip=Innstillinger
+
+# Contact Strings (Panel)
+
+## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
+## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+contacts_search_placesholder=Søk …
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+new_contact_button=Ny kontakt
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Navn
+new_contact_email_placeholder=E-post
+## LOCALIZATION NOTE (add_contact_button):
+## This is the button to actually add the new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+add_contact_button=Legg til kontakt
+### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
+### the user enters an invalid email address, preventing the addition of the
+### contact.
+valid_email_text_description=Skriv inn en gyldig e-postadresse
+
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Legg til eller importer kontakt
+## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where these appear on the UI
+import_contacts_button=Importer
+importing_contacts_progress_button=Importerer …
+## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
+## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Synkroniser kontakter
+## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
+## contacts fails. This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Beklager, import av kontakter mislyktes
+## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
+## fails and the user may need more help. In this item, don't translate the part between
+## {{..}} because this will be replaced by the label from import_failed_support_link_label.
+## This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Beklager, importering av kontakter mislyktes. Se {{import_failed_support_link_label}} for hjelp
+import_failed_support_link_label=brukerstøtte
+
+## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Slett kontakt
+## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
+## to confirm deletion of a contact.
+confirm_delete_contact_alert=Er du sikker på at du ønsker å slette denne kontakten?
+## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
+## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Slett kontakt
+confirm_delete_contact_cancel_button=Avbryt
+
+## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to block a contact from calling
+## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Blokker kontakt
+## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to unblock a contact and allow them
+## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Opphev blokkering av kontakt
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Rediger kontakt …
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Rediger kontakt
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Navn
+edit_contact_email_label=E-post
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Ferdig
+
+## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Lydsamtale
+
+## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Videosamtale
 
 # Conversation Window Strings
 
-incoming_call_title=Innkommende samtale …
-incoming_call=Innkommende samtale
-incoming_call_answer_button=Svar
-incoming_call_decline_button=Avvis
-incoming_call_ignore_button=Ignorer
+initiate_call_button_label2=Klar til å starte samtalen?
+incoming_call_title2=Samtaleforespørsel
+incoming_call_accept_button=Aksepter
+incoming_call_accept_audio_only_tooltip=Aksepter med stemme
+incoming_call_cancel_button=Avbryt
+incoming_call_cancel_and_block_button=Avbryt og blokker
 incoming_call_block_button=Blokker
-hangup_button_title=Legg på
+hangup_button_title=Heng på
+hangup_button_caption2=Avslutt
 mute_local_audio_button_title=Demp lyden din
-unmute_local_audio_button_title=Opphev demping av lyden din
-mute_local_video_button_title=Demp bildet ditt
-unmute_local_video_button_title=Opphev demping av bildet ditt
+unmute_local_audio_button_title=Opphev demping
+mute_local_video_button_title=Demp videoen din
+unmute_local_video_button_title=Opphev demping
 
-peer_ended_conversation=Samtalepartner avsluttet samtalen.
-call_has_ended=Samtalen er avsluttet.
-close_window=Lukk dette vinduet
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Samtale med {{contactName}}
 
-cannot_start_call_session_not_ready=Klarte ikke starte samtale, økt er ikke klar.
+# Outgoing conversation
+
+outgoing_call_title=Start samtale?
+initiate_audio_video_call_button2=Start
+initiate_audio_video_call_tooltip2=Start en videosamtale
+initiate_audio_call_button2=Lydsamtale
+initiate_call_cancel_button=Avbryt
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Kobler til …
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Ringer …
+
+peer_ended_conversation2=Personen du ringte har avsluttet samtalen.
+conversation_has_ended=Samtalen er avsluttet.
+restart_call=Koble til igjen
+
+generic_failure_title=Noe gikk galt.
+generic_failure_with_reason2=Du kan prøve igjen, eller sende en URL som du kan treffes på senere.
+generic_failure_no_reason2=Vil du prøve igjen?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Personen er ikke tilkoblet
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=Samtalen din nådde ikke frem.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Prøv igjen
+email_link_button=Send lenke på e-post
+cancel_button=Avbryt
+
+cannot_start_call_session_not_ready=Klarte ikke starte samtale, økten er ikke klar.
 network_disconnected=Nettverkstilkoblingen ble uventet avbrutt.
+connection_error_see_console_notification=Samtale mislyktes; se konsoll for detaljer.
 
-connection_error_see_console_notification=Samtale mislykket; se konsoll for mer info.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=Ved å bruke dette produktet godtar du <a \
-  target="_blank" href="{{terms_of_use_url}}">bruksbetingelsene</a> og <a \
-  href="{{privacy_notice_url}}">personvernbestemmelsene</a>.
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=Ved å bruke {{clientShortname}} godtar du {{terms_of_use}} \
+  og {{privacy_notice}}.
+legal_text_tos = bruksbetingelsene
+legal_text_privacy = personvernmerknadene
+client_shortname_fallback=dette produktet
+
+feedback_call_experience_heading2=Hvordan var samtalen din?
+feedback_what_makes_you_sad=Hva gjør deg trist?
+feedback_thank_you_heading=Takk for tilbakemeldingen!
+feedback_category_audio_quality=Lydkvalitet
+feedback_category_video_quality=Videokvalitet
+feedback_category_was_disconnected=Ble koblet fra
+feedback_category_confusing=Forvirrende
+feedback_category_other=Annet:
+feedback_custom_category_text_placeholder=Hva gikk galt?
+feedback_submit_button=Send
+feedback_back_button=Tilbake
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Dette vinduet lukkes om {{countdown}} sekund;Dette vinduet lukkes om {{countdown}} sekunder
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Koble til igjen
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Rapporter bruker
