--- a/sv-SE/dom/chrome/security/csp.properties
+++ b/sv-SE/dom/chrome/security/csp.properties
@@ -67,6 +67,7 @@ scriptFromStringBlocked = Ett försök till anrop av JavaScript från en sträng
 hostNameMightBeKeyword = Tolkar %1$S som ett värdnamn och inte ett nyckelord. Om du avsåg ett nyckelord, använd '%2$S' (omslutna av enkla citattecken).
 # LOCALIZATION NOTE (notSupportingDirective):
 # directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Direktivet "%1$S" stöds inte. Direktivet och värden kommer ignoreras.
 
 # CSP Errors:
 policyURINotAlone = det får bara finnas ett policy-uri-direktiv
