[he] badContentBlocked.* @ browser/chrome/browser/browser.properties

--- a/he/browser/chrome/browser/browser.properties
+++ b/he/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=אל תראה הודעה זו בעת חסימת 
 popupWarningDontShowFromLocationbar=אל תציג את שורת המידע כשחלונות קופצים נחסמים
 popupShowPopupPrefix=הצג את '%S'
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=%S חוסם תוכן בדף זה.
+badContentBlocked.notblocked.message=%S אינו חוסם כל תוכן בדף זה.
+
 # missing plugin installer
 installPlugin.message = האם ברצונך להתקין את התוסף החיצוני שנדרש להצגת המדיה בדף זה? 
 installPlugin.button.label=התקנת %S
