[he] webapps.* @ browser/chrome/browser/browser.properties

--- a/he/browser/chrome/browser/browser.properties
+++ b/he/browser/chrome/browser/browser.properties
@@ -451,6 +451,12 @@ webapps.install.accesskey = ת
 webapps.requestInstall = האם ברצונך להתקין את "%1$S" מאתר זה (%2$S)?
 webapps.install.success = יישום הותקן
 webapps.install.inprogress = התקנה מתבצעת
+webapps.uninstall = להסיר
+webapps.uninstall.accesskey = ה
+webapps.doNotUninstall = לא להסיר
+webapps.doNotUninstall.accesskey = ל
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = האם ברצונך להסיר את "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S כעת במסך מלא.
