[he] getUserMedia.* @ browser/chrome/browser/browser.properties

--- a/he/browser/chrome/browser/browser.properties
+++ b/he/browser/chrome/browser/browser.properties
@@ -547,41 +547,62 @@ getUserMedia.shareEntireScreen.label = כל המסך
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Replacement for #1 is the name of the application.
 # Replacement for #2 is the number of windows currently displayed by the application.
-
-getUserMedia.shareSelectedDevices.label = לשתף את ההתקן הנבחר;לשתף התקנים נבחרים
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 window);#1 (#2 windows)
+# LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# The number of devices can be either one or two.
+getUserMedia.shareSelectedDevices.label = שיתוף התקן נבחר;שיתוף התקנים נבחרים
 getUserMedia.shareSelectedDevices.accesskey = ש
 getUserMedia.shareScreen.label = שיתוף מסך
-
+getUserMedia.shareApplication.label = שיתוף ישום נבחר
 getUserMedia.shareWindow.label = שיתוף חלון נבחר
 getUserMedia.shareSelectedItems.label = שיתוף פריטים נבחרים
 getUserMedia.always.label = לשתף תמיד
-getUserMedia.always.accesskey = ת
-
+getUserMedia.always.accesskey = ש
 getUserMedia.denyRequest.label = לא לשתף
 getUserMedia.denyRequest.accesskey = ל
-
 getUserMedia.never.label = לעולם לא לשתף
 getUserMedia.never.accesskey = ע
-
 getUserMedia.sharingCamera.message2 = המצלמה שלך משותפת כעת עם דף זה.
 getUserMedia.sharingMicrophone.message2 = המיקרופון שלך משותף כעת עם דף זה.
 getUserMedia.sharingCameraAndMicrophone.message2 = המצלמה והמיקרופון שלך משותפים כעת עם דף זה.
-
+getUserMedia.sharingApplication.message = ישום כלשהו משותף כעת עם דף זה.
 getUserMedia.sharingScreen.message = המסך שלך משותף כעת עם דף זה.
-getUserMedia.sharingWindow.message = חלון נבחר משותף כעת עם דף זה.
-
+getUserMedia.sharingWindow.message = חלון כלשהו משותף כעת עם דף זה.
 getUserMedia.continueSharing.label = להמשיך לשתף
 getUserMedia.continueSharing.accesskey = מ
 getUserMedia.stopSharing.label = להפסיק לשתף
 getUserMedia.stopSharing.accesskey = פ
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S חסם תוכן שאינו בטוח.
-mixedContentBlocked.keepBlockingButton.label = להמשיך לחסום
-mixedContentBlocked.keepBlockingButton.accesskey = ח
-mixedContentBlocked.unblock.label = לנטרל הגנה עבור דף זה
-mixedContentBlocked.unblock.accesskey = נ
+getUserMedia.sharingMenu.label = התקני שיתוף לשוניות
+getUserMedia.sharingMenu.accesskey = ת
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (מצלמה)
+getUserMedia.sharingMenuMicrophone = %S (מיקרופון)
+getUserMedia.sharingMenuApplication = %S (ישום)
+getUserMedia.sharingMenuScreen = %S (מסך)
+getUserMedia.sharingMenuWindow = %S (חלון)
+getUserMedia.sharingMenuCameraMicrophone = %S (מצלמה ומיקרופון)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (מצלמה, מיקרופון ויישום)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (מצלמה, מיקרופון ומסך)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (מצלמה, מיקרופון וחלון)
+getUserMedia.sharingMenuMicrophoneApplication = %S (מיקרופון ויישום)
+getUserMedia.sharingMenuMicrophoneScreen = %S (מיקרופון ומסך)
+getUserMedia.sharingMenuMicrophoneWindow = %S (מיקרופון וחלון)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = מקור לא ידוע
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = נראה כי %S עולה… לאט…
