[he] getUserMedia.shareApplicationWindowCount.label @ browser/chrome/browser/browser.properties

--- a/he/browser/chrome/browser/browser.properties
+++ b/he/browser/chrome/browser/browser.properties
@@ -547,7 +547,7 @@ getUserMedia.shareEntireScreen.label = כל המסך
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Replacement for #1 is the name of the application.
 # Replacement for #2 is the number of windows currently displayed by the application.
-getUserMedia.shareApplicationWindowCount.label=#1 (#2 window);#1 (#2 windows)
+getUserMedia.shareApplicationWindowCount.label=#1 (חלון אחד);#1 (#2 חלונות)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
