--- a/sl/browser/chrome/browser/loop/loop.properties
+++ b/sl/browser/chrome/browser/loop/loop.properties
@@ -4,38 +4,267 @@
 
 # Panel Strings
 
-share_link_header_text=Delite to povezavo kot povabilo na pogovor:
+share_link_header_text=Delite to povezavo kot vabilo na pogovor:
+
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Koga želite povabiti?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=Vabilo bo poteklo čez {{expiry_time}} dan;Vabilo bo poteklo čez {{expiry_time}} dni
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=Vabilo bo poteklo čez {{expiry_time}} uro;Vabilo bo poteklo čez nekaj ur ({{expiry_time}})
 
 # Status text
+display_name_guest=Gost
 display_name_dnd_status=Ne moti
 display_name_available_status=Na voljo
 
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Pridobivanje naslova za klicanje ni uspelo.
+session_expired_error_description=Seja je potekla. Naslovi URL, ki ste jih predhodno ustvarili in delili, ne bodo več delovali.
+could_not_authenticate=Prijava ni uspela
+password_changed_question=Ste spremenili geslo?
+try_again_later=Poskusite znova pozneje
+could_not_connect=Povezava s strežnikom ni uspela
+check_internet_connection=Preverite vašo internetno povezavo
+login_expired=Vaša prijava je potekla
+service_not_available=Storitev ta trenutek ni na voljo
+problem_accessing_account=Pri dostopu do vašega računa je prišlo do napake
+
+## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
+## the appropriate action.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Ponovi
+
+share_email_subject3=Prejeli ste vabilo na pogovor
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=Če želite sprejeti vabilo, kliknite ali kopirajte povezavo za začetek vašega pogovora:\r\n\r\n{{callUrl}}
+share_button=Pošlji
+copy_url_button=Kopiraj
+copied_url_button=Kopirano!
+
+panel_footer_signin_or_signup_link=Prijava ali registracija
+
+settings_menu_item_account=Račun
+settings_menu_item_settings=Nastavitve
+settings_menu_item_signout=Odjava
+settings_menu_item_signin=Prijava
+settings_menu_button_tooltip=Nastavitve
+
+# Contact Strings (Panel)
+
+## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
+## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+contacts_search_placesholder=Išči …
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+new_contact_button=Nov stik
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Ime
+new_contact_email_placeholder=E-pošta
+## LOCALIZATION NOTE (add_contact_button):
+## This is the button to actually add the new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+add_contact_button=Dodaj stik
+### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
+### the user enters an invalid email address, preventing the addition of the
+### contact.
+valid_email_text_description=Vnesite veljaven e-poštni naslov
+
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Dodajanje in uvažanje stikov
+## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where these appear on the UI
+import_contacts_button=Uvoz
+importing_contacts_progress_button=Uvažanje …
+## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
+## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Sinhroniziraj stike
+## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
+## contacts fails. This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Uvoz stikov žal ni uspel
+## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
+## fails and the user may need more help. In this item, don't translate the part between
+## {{..}} because this will be replaced by the label from import_failed_support_link_label.
+## This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Uvoz stikov žal ni uspel. Za pomoč se obrnite na {{import_failed_support_link_label}}
+import_failed_support_link_label=strani s podporo
+
+## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Odstrani stik
+## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
+## to confirm deletion of a contact.
+confirm_delete_contact_alert=Ste prepričani, da želite izbrisati ta stik?
+## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
+## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Odstrani stik
+confirm_delete_contact_cancel_button=Prekliči
+
+## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to block a contact from calling
+## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Zavrni stik
+## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to unblock a contact and allow them
+## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Dovoli stik
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Uredi stik …
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Urejanje stika
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Ime
+edit_contact_email_label=E-pošta
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Končaj
+
+## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Zvočni pogovor
+
+## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Videopogovor
 
 # Conversation Window Strings
 
-incoming_call_title=Dohodni klic …
-incoming_call=Dohodni klic
-incoming_call_answer_button=Odgovori
-incoming_call_decline_button=Prekini
-incoming_call_ignore_button=Prezri
+initiate_call_button_label2=Ste pripravljeni začeti pogovor?
+incoming_call_title2=Zahteva za pogovor
+incoming_call_accept_button=Sprejmi
+incoming_call_accept_audio_only_tooltip=Sprejmi z glasom
+incoming_call_cancel_button=Prekliči
+incoming_call_cancel_and_block_button=Prekliči in zavrni
 incoming_call_block_button=Zavrni
 hangup_button_title=Odloži
+hangup_button_caption2=Izhod
 mute_local_audio_button_title=Izklopite svoj zvok
 unmute_local_audio_button_title=Vklopite svoj zvok
 mute_local_video_button_title=Izklopite svoj video
 unmute_local_video_button_title=Vklopite svoj video
 
-peer_ended_conversation=Vaš sogovornik je končal pogovor.
-call_has_ended=Vaš klic se je končal.
-close_window=Zapri to okno
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Pogovor: {{contactName}}
+
+# Outgoing conversation
+
+outgoing_call_title=Začnem pogovor?
+initiate_audio_video_call_button2=Začni
+initiate_audio_video_call_tooltip2=Začni videopogovor
+initiate_audio_call_button2=Glasovni pogovor
+initiate_call_cancel_button=Prekliči
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Povezovanje …
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Zvonjenje …
+
+peer_ended_conversation2=Oseba, ki ste jo klicali, je končala pogovor.
+conversation_has_ended=Vaš pogovor je končan.
+restart_call=Poskusi znova
+
+generic_failure_title=Prišlo je do napake.
+generic_failure_with_reason2=Lahko poskusite znova ali pošljete povezavo, na kateri boste dosegljivi pozneje.
+generic_failure_no_reason2=Želite poskusiti znova?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Ta oseba ni povezana
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=Vaš klic ni bil vzpostavljen.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Poskusi znova
+email_link_button=Pošlji povezavo
+cancel_button=Prekliči
 
 cannot_start_call_session_not_ready=Klica ni mogoče začeti, ker seja ni pripravljena.
 network_disconnected=Omrežna povezava se je nepričakovano prekinila.
-
 connection_error_see_console_notification=Klic ni uspel. Podrobnosti preverite v konzoli.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=Z uporabo tega izdelka se strinjate s <a \
-  target="_blank" href="{{terms_of_use_url}}">Pogoji uporabe</a> in <a \
-  href="{{privacy_notice_url}}">Obvestilom o zasebnosti</a>.
+
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=Z uporabo {{clientShortname}} se strinjate s {{terms_of_use}} \
+  in {{privacy_notice}}.
+legal_text_tos = pogoji uporabe
+legal_text_privacy = obvestilom o zasebnosti
+client_shortname_fallback=tega izdelka
+
+feedback_call_experience_heading2=Kakšen je bil vaš pogovor?
+feedback_what_makes_you_sad=Kaj vas žalosti?
+feedback_thank_you_heading=Hvala za vaš komentar!
+feedback_category_audio_quality=Kakovost zvoka
+feedback_category_video_quality=Kakovost videa
+feedback_category_was_disconnected=Klic se je prekinil
+feedback_category_confusing=Zmeda
+feedback_category_other=Drugo:
+feedback_custom_category_text_placeholder=Kaj je šlo narobe?
+feedback_submit_button=Pošlji
+feedback_back_button=Nazaj
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Okno se bo kmalu zaprlo: {{countdown}};Okno se bo kmalu zaprlo: {{countdown}}
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Ponovi
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Prijavi uporabnika
