[qa] security: Bug 1075466 - fix

--- a/sr/security/manager/chrome/pipnss/pipnss.properties
+++ b/sr/security/manager/chrome/pipnss/pipnss.properties
@@ -20,10 +20,10 @@ ManufacturerID=Mozilla.org
 LibraryDescription=PSM интерни сервис шифровања
 #
 # 32 bytes long after conversion to UTF8
-TokenDescription=Генеричке услуге шифровања
+TokenDescription=Услуге шифровања
 #
 # 32 bytes long after conversion to UTF8
-PrivateTokenDescription=Програмски уређај за безбедност
+PrivateTokenDescription=Уређај за безб.
 #
 # 64 bytes long after conversion to UTF8
 SlotDescription=PSM унутрашња услуга шифровања
