--- a/sl/browser/chrome/browser/devtools/webconsole.properties
+++ b/sl/browser/chrome/browser/devtools/webconsole.properties
@@ -241,3 +241,19 @@ selfxss.okstring=dovoli lepljenje
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Prikaži/skrij podrobnosti sporočila.
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 prosto mesto;Več prostih mest (#1)
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(indeks)
+table.iterationIndex=(zaporedni indeks)
+table.key=Ključ
+table.value=Vrednosti
