--- a/sl/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sl/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Plošča beležnice
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Beležnica
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Opozorilo: bodite previdni pri lepljenju vsebine, ki je ne razumete. To lahko napadalcem omogoča krajo vaše identitete ali prevzem nadzora nad vašim računalnikom. Vnesite '%S' v beležnico spodaj, da omogočite lepljenje.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=dovoli lepljenje
