browser update 9 for aurora 34

--- a/fy-NL/browser/chrome/browser/loop/loop.properties
+++ b/fy-NL/browser/chrome/browser/loop/loop.properties
@@ -173,7 +173,8 @@ video_call_menu_button=Fideopetear
 initiate_call_button_label2=Ree om jo petear te starten?
 incoming_call_title2=Petearfersyk
 incoming_call_accept_button=Akseptearje
-incoming_call_accept_audio_only_tooltip=Akseptearje mei stim
+incoming_call_accept_audio_only_tooltip=Akseptearje mei audio
+incoming_call_accept_audio_video_tooltip=Akseptearje mei fideo
 incoming_call_cancel_button=Annulearje
 incoming_call_cancel_and_block_button=Annulearje en blokkearje
 incoming_call_block_button=Blokkearje
