[mobile] Bug 1034114 - Defer remote debugger initialization via notification

--- a/fr/mobile/android/chrome/browser.properties
+++ b/fr/mobile/android/chrome/browser.properties
@@ -319,6 +319,10 @@ remoteNotificationGenericName=Application
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Écoute sur le port %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Activer le débogage pour %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Appuyez pour activer le débogage distant
 
 # Helper apps
 helperapps.open=Ouvrir
