[browser] Bug 1031019: add "Apps" toolbar button that points to Marketplace

--- a/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -102,3 +102,6 @@ loop-call-button.tooltiptext = Inviter quelqu'un à discuter
 
 panic-button.label = Effacer des données
 panic-button.tooltiptext = Effacer des données de l'historique de navigation
+
+web-apps-button.label = Applications
+web-apps-button.tooltiptext = Découvrir des applications
