[he] browser/chrome/browser/browser.properties

--- a/he/browser/chrome/browser/browser.properties
+++ b/he/browser/chrome/browser/browser.properties
@@ -250,8 +250,6 @@ bookmarksMenuButton.tooltip=הצגת הסימניות שלך (%S)
 # Star button
 starButtonOn.tooltip2=עריכת סימנייה זו (%S)
 starButtonOff.tooltip2=יצירת סימנייה לדף זה (%S)
-starButtonOn.tooltip=עריכת סימנייה זו
-starButtonOff.tooltip=צור סימנייה לעמוד זה
 starButtonOverflowed.label=צור סימנייה לדף זה
 starButtonOverflowedStarred.label=עריכת סימנייה זו
 
@@ -305,8 +303,6 @@ identity.unencrypted=החיבור שלך לאתר זה לא מוצפן.
 
 identity.unknown.tooltip=אתר זה לא מספק מידע זהות.
 
-identity.ownerUnknown2=(לא ידוע)
-
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
 identity.chrome=זהו דף %S מאובטח
 
@@ -343,9 +339,6 @@ geolocation.neverShareLocation=לעולם אל תשתף מיקום
 geolocation.neverShareLocation.accesskey=ל
 geolocation.shareWithSite=האם ברצונך לשתף את המיקום שלך עם %S?
 geolocation.shareWithFile=האם ברצונך לשתף את המיקום שלך עם הקובץ %S?
-# LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
-# or use "..." if \u2026 doesn't suit traditions in your locale.
-geolocation.learnMore=מידע נוסף…
 
 webNotifications.showForSession=להציג בהפעלה זו
 webNotifications.showForSession.accesskey=צ
@@ -472,17 +465,7 @@ service.toolbarbutton.tooltiptext=שירותים
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=האם ברצונך להפעיל שירותים מ-%1$S להצגה בסרגל הכלים וסרגל הצד של %2$S?
 service.install.ok.label=לאפשר שירותים
-service.install.ok.accesskey=E
-service.install.learnmore=מידע נוסף…
-
-# LOCALIZATION NOTE (social.turnOff.label): %S is the name of the social provider
-social.turnOff.label=לכבות עבור %S
-social.turnOff.accesskey=כ
-# LOCALIZATION NOTE (social.turnOn.label): %S is the name of the social provider
-social.turnOn.label=להפעיל עבור %S
-social.turnOn.accesskey=פ
-social.turnOffAll.label=כיבוי כל השירותים
-social.turnOnAll.label=הפעלת כל השירותים
+service.install.ok.accesskey=א
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
 social.markpageMenu.label=שמירת דף ב־%S
