--- a/es-CL/browser/chrome/browser/devtools/app-manager.properties
+++ b/es-CL/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=El Administrador de aplicaciones será removido en una versión futura. Sus proyectos han sido migrados a WebIDE.
+index.launchWebIDE=Lanzar WebIDE
+index.readMoreAboutWebIDE=Leer más
 device.deviceSize=Tamaño del dispositivo: %1$Sx%2$S (%3$S DPI)
 connection.connectedToDevice=Conectado a %1$S
 connection.connectTo=Conectado a %1$S:%2$S
