--- a/es-CL/dom/chrome/security/security.properties
+++ b/es-CL/dom/chrome/security/security.properties
@@ -4,6 +4,7 @@ BlockMixedDisplayContent = Se ha bloqueado la carga del contenido visual mixto "
 BlockMixedActiveContent = Se ha bloqueado la carga del contenido activo mixto "%1$S"
 CrossSiteRequestBlocked=Solicitud de origen cruzado denegada: La misma política de origen no permite la lectura de la fuente remota en %1$S. Esto puede ser solucionado moviendo el recurso al mismo dominio o activando CORS.
 InvalidSTSHeaders=El sitio especificó una cabecera de Strict-Transport-Security inválida.
+InvalidPKPHeaders=El sitio especificó una cabecera Public-Key-Pins inválida.
 InsecurePasswordsPresentOnPage=Campos de contraseña presentes en una página insegura (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
 InsecureFormActionPasswordsPresent=Campos de contraseña presentes en un formulario con una acción de formulario insegura (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
 InsecurePasswordsPresentOnIframe=Campos de contraseña presentes en un iframe inseguro (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
